--- a/microservice-consumer-movie/src/main/resources/application.yml
+++ b/microservice-consumer-movie/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 server:
   port: 8010
+spring:
+  application:
+    name: microservice-consumer-movie
+
+eureka:
+  client:
+    servericeUrl:
+      defaultZone: http://peer1:8761/eureka/
+    healthcheck:
+      enabled: true
+  instance:
+    prefer-ip-address: true
+
+# 配置logback
+logging:
+  config: classpath:logback.xml
+
