--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   application:
     name: microservice-provider-user
   datasource:
-   url: jdbc:mysql://192.168.20.3:3306/test
+   url: jdbc:mysql://127.0.0.1:3306/test
    username: root
-   password: root
+   password: 1qaz@WSX
    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     database: mysql
