--- a/microservice-provider-user-zipkinserver/src/main/resources/application.yml
+++ b/microservice-provider-user-zipkinserver/src/main/resources/application.yml
@@ -11,16 +11,16 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-
   sleuth:
     sampler:
       percentage: 1.0
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: admin
-    password: admin
+  zipkin:
+    base-url: http://localhost:9411
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
 
 
 eureka:
@@ -38,15 +38,6 @@ logging:
     root: INFO
     org.springframework.cloud.sleuth: DEBUG
     # org.springframework.web.servlet.DispatcherServlet: DEBUG
-
-info:
-  app:
-    name: @project.artifactId@
-    encoding: @project.build.sourceEncoding@
-    java:
-      source: @java.version@
-      target: @java.version@
-
 
 
 
